@@ -7,7 +7,7 @@ ID Software
 http://www.idsoftware.com/
 
 Atari version:
-Patrice Mandin <pmandin -at- caramail -dot - com>
+Patrice Mandin <patmandin@gmail.com>
 http://pmandin.atari.org/
 
 Atari networking with Sting:
